--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: Poppins;
-	src: url('../fonts/Poppins-Regular.woff') format("woff");
+	src: url("../fonts/Poppins-Regular.woff") format("woff");
 	font-style: normal;
 }
 
@@ -32,7 +32,7 @@ body {
 	position: relative;
 }
 
-.input-box input {
+.wrapper .input-box input {
 	width: 100%;
 	height: 100%;
 	font-size: 20px;
@@ -41,12 +41,20 @@ body {
 	border-bottom: 2px solid silver;
 }
 
-.input-box label {
+.wrapper .input-box label {
 	position: absolute;
 	top: 50%;
 	left: 2px;
 	transform: translateY(-50%);
 	font-size: 20px;
-	color: #000;
+	color: hsla(0, 0%, 40%);
 	pointer-events: none;
+	transition: all 0.3s;
+}
+
+.wrapper .input-box.active label {
+	transform: translate(-5px, -38px);
+	font-size: 15px;
+	font-weight: 700;
+	color: #3499ff;
 }
