--- a/css/style.css
+++ b/css/style.css
@@ -52,9 +52,23 @@ body {
 	transition: all 0.3s;
 }
 
+.wrapper .input-box span.underline {
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	height: 2px;
+	width: 100%;
+	transform: scale(0);
+	transition: transform .3s ease;
+}
+
 .wrapper .input-box.active label {
 	transform: translate(-5px, -38px);
 	font-size: 15px;
 	font-weight: 700;
 	color: #3499ff;
+}
+
+.wrapper .input-box.active span.underline {
+	transform: scale(1);
 }
